# nodejs-tutorial

./: Jenkinsfile  README.md
my-tc-project/: package.json
my_bazel_tc_project/: BUILD.bazel  Dockerfile  WORKSPACE  package.json
